// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render a large icon 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-circle"
    size="large"
  />
</Fragment>
`;

exports[`<Icon /> should render a non-FontAwesome icon 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon intelli-icon-avatar"
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render an icon with a badge 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    size="xlarge"
  />
  <styled.span
    size="xlarge"
  >
    <Badge
      backgroundColor="#CADDFC"
      color="#CADDFC"
      label={6}
      size="medium"
    />
  </styled.span>
</Fragment>
`;

exports[`<Icon /> should render icon with a custom size 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    customSize={2.6}
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render icon with colour 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    color="#1A2B3C"
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render icon with no size or colour 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render icon with size 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    size="medium"
  />
</Fragment>
`;
